tests/ui/unsized-locals/unsized-param-in-extern-c-decl-issue-115845.rs
#![feature(unsized_tuple_coercion)]
#![feature(unsized_fn_params)]

pub extern "C" fn declare_bad(_x: str) {} //~ERROR: cannot be known at compilation time

fn main() {}
